; ModuleID = '/home/carl/AnghaBench/timescaledb/src/extr_extension_utils.c_proxy_table_exists.c'
source_filename = "/home/carl/AnghaBench/timescaledb/src/extr_extension_utils.c_proxy_table_exists.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CACHE_SCHEMA_NAME = common dso_local global i32 0, align 4
@EXTENSION_PROXY_TABLE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @proxy_table_exists to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @proxy_table_exists() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32, i32* @CACHE_SCHEMA_NAME, align 4
  %4 = call i32 @get_namespace_oid(i32 %3, i32 1)
  store i32 %4, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = call i32 @OidIsValid(i32 %5)
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %9, label %8

8:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %14

9:                                                ; preds = %0
  %10 = load i32, i32* @EXTENSION_PROXY_TABLE, align 4
  %11 = load i32, i32* %2, align 4
  %12 = call i32 @get_relname_relid(i32 %10, i32 %11)
  %13 = call i32 @OidIsValid(i32 %12)
  store i32 %13, i32* %1, align 4
  br label %14

14:                                               ; preds = %9, %8
  %15 = load i32, i32* %1, align 4
  ret i32 %15
}

declare dso_local i32 @get_namespace_oid(i32, i32) #1

declare dso_local i32 @OidIsValid(i32) #1

declare dso_local i32 @get_relname_relid(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
